ADD manager router + service + crud, GetCase endpoint, cases.yml, cover models REFACTOR migration name date -> datetime, GetByLevel give only NOT RATED by current user cases
